--- a/Building_Interactive_Websites/JavaScript_Syntax_Part_II/Objects/Lesson_1_Objects/index.html
+++ b/Building_Interactive_Websites/JavaScript_Syntax_Part_II/Objects/Lesson_1_Objects/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript Syntax Part II</title>
+    <title>Objects</title>
 </head>
 <body>
 
