Arrow functions and this

--- a/Building_Interactive_Websites/JavaScript_Syntax_Part_II/Objects/Lesson_2_Advanced_Objects/index.html
+++ b/Building_Interactive_Websites/JavaScript_Syntax_Part_II/Objects/Lesson_2_Advanced_Objects/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
   <script src="js/the_this_keyword.js"></script>
+    <script src="js/arrow_functions_and_this.js"></script>
 </head>
 <body>
 
