--- a/Building_Interactive_Websites/JavaScript_Syntax_Part_II/Objects/Lesson_2_Advanced_Objects/index.html
+++ b/Building_Interactive_Websites/JavaScript_Syntax_Part_II/Objects/Lesson_2_Advanced_Objects/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
   <script src="js/the_this_keyword.js"></script>
     <script src="js/arrow_functions_and_this.js"></script>
+    <script src="js/privacy.js"></script>
 </head>
 <body>
 
