--- a/Building_Interactive_Websites/JavaScript_Syntax_Part_II/Objects/Lesson_2_Advanced_Objects/index.html
+++ b/Building_Interactive_Websites/JavaScript_Syntax_Part_II/Objects/Lesson_2_Advanced_Objects/index.html
@@ -7,6 +7,7 @@
     <script src="js/arrow_functions_and_this.js"></script>
     <script src="js/privacy.js"></script>
     <script src="js/getters.js"></script>
+    <script src="js/setters.js"></script>
 </head>
 <body>
 
