--- a/Building_Interactive_Websites/JavaScript_Syntax_Part_II/Objects/Lesson_2_Advanced_Objects/index.html
+++ b/Building_Interactive_Websites/JavaScript_Syntax_Part_II/Objects/Lesson_2_Advanced_Objects/index.html
@@ -8,6 +8,7 @@
     <script src="js/privacy.js"></script>
     <script src="js/getters.js"></script>
     <script src="js/setters.js"></script>
+    <script src="js/factory_functions.js"></script>
 </head>
 <body>
 
