--- a/Building_Interactive_Websites/JavaScript_Syntax_Part_II/Objects/Lesson_2_Advanced_Objects/index.html
+++ b/Building_Interactive_Websites/JavaScript_Syntax_Part_II/Objects/Lesson_2_Advanced_Objects/index.html
@@ -10,6 +10,7 @@
     <script src="js/setters.js"></script>
     <script src="js/factory_functions.js"></script>
     <script src="js/property_value_shorthand.js"></script>
+    <script src="js/destructured_assignment.js"></script>
 </head>
 <body>
 
